--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "homepage": "https://github.com/uoc-advanced-html-css/uoc-boilerplate#readme",
   "devDependencies": {
+    "@namics/stylelint-bem": "^8.1.0",
     "@parcel/transformer-sass": "^2.8.3",
     "autoprefixer": "^10.4.13",
     "npm-run-all": "^4.1.5",
